k8s/base/app/mailpit/virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mailpit-virtualservice
spec:
  hosts:
    - "mail.presona.store"
  gateways:
    - network-istio/default-gateway
  http:
    - name: "mailpit-v1-routes"
      match:
        - uri:
            prefix: /
      route:
        - destination:
            host: mailpit-http.app-mailpit.svc.cluster.local
            port:
              number: 80
